Added support for component stylesheets

--- a/exception/view.less
+++ b/exception/view.less
@@ -1,10 +1,10 @@
-.link-like {
-	cursor: pointer;
-	color: #69C;
-	text-decoration: underline;
-}
 
-.oxygen-exception {
+	.link-like {
+		cursor: pointer;
+		color: #69C;
+		text-decoration: underline;
+	}
+
 	font-family:Verdana;
 	font-size:0.8em;
 	.details {
@@ -16,12 +16,13 @@
         border:1px solid #EEE0E0;
         padding:10px;
 	}
+
 	table.trace {
 		font-size:1em;
 		margin:8px;
 		tr {
 			cursor: default;
-			&.hover {
+			&:hover {
 				background-color:#FFFCF0;	
 			}
 		}
@@ -37,6 +38,7 @@
 		}
 	}	
 	ul.arguments {
+
 		li.complex-argument {
 			.type {
 				.link-like;
@@ -58,5 +60,3 @@
 			}
 		}
 	}
-
-}
