--- a/common/application/view.less
+++ b/common/application/view.less
@@ -11,6 +11,18 @@ div.oxy-wrap {
 
 }
 
+.rounded(@radius: 8px) {
+	border-radius: @radius;
+}
+
+.std-form {
+	margin: 20px;
+	padding: 20px;
+	.rounded;
+	background-color: #EEE;
+	box-shadow:inset 0px 0px 8px #CCC;
+}
+
 form.logon-form {
 	padding-left: 20px;
 	background-image: icon(key);
@@ -254,10 +266,18 @@ div.oxy-header {
 		float:left;
 		& > li {
 			float:right;
-			margin:14px;
-			color: #CCC;
-			font-size:11px;
-			font-family: Verdana;
+            a {
+        		padding:14px;
+    			color: #CCC;
+	    		font-size:11px;
+                display: block;
+                text-decoration: none;
+	   	    	font-family: Verdana;
+                &:hover {
+                    background-color: #555;
+                    color: white;
+                }
+            }
 		}
 	}
 
