Submenu trial (commented out)

--- a/common/application/view.less
+++ b/common/application/view.less
@@ -266,6 +266,27 @@ div.oxy-header {
 	ul.bread-crumbs {
 		float:left;
 		& > li {
+			/*
+			position: relative;
+			&:hover > ul.submenu {
+				height: auto;
+				width: 300px;
+				-moz-transition:1s;
+			}
+			& > ul.submenu {
+				position: absolute;
+				height: 0px;
+				display: block;
+				overflow: hidden;
+				z-index: 100 !important;
+				background-color: #888;
+				& > li {
+					a {
+						padding: 8px;
+					}
+
+				}
+			}*/
 			float:right;
             a {
         		padding:14px;
