--- a/common/application/flash.less
+++ b/common/application/flash.less
@@ -1,4 +1,5 @@
 position: absolute;
+z-index: 999;
 left: 35%;
 width: 300px;
 
@@ -11,4 +12,7 @@ width: 300px;
     border-radius: 8px;
     box-shadow: 3px 3px 10px #444;
     border: 3px solid #DCB;
+    font-family: sans-serif;
+    font-size: 13px;
+    line-height: 1.3em;
 }
