--- a/common/application/header.less
+++ b/common/application/header.less
@@ -2,32 +2,13 @@ background-color: #444;
 min-height: 40px;
 box-shadow: inset 0px -10px 20px #222;
 height: 1%;
+vertical-align: top;
 
 ul.bread-crumbs {
-	float:left;
+	float: left;
+	width: auto;
 	& > li {
-		/*
-		position: relative;
-		&:hover > ul.submenu {
-			height: auto;
-			width: 300px;
-			-moz-transition:1s;
-		}
-		& > ul.submenu {
-			position: absolute;
-			height: 0px;
-			display: block;
-			overflow: hidden;
-			z-index: 100 !important;
-			background-color: #888;
-			& > li {
-				a {
-					padding: 8px;
-				}
-
-			}
-		}*/
-		float:right;
+		float: right;
         a {
     		padding:14px;
 			color: #CCC;
