Fixed border shadow in IE9

--- a/common/application/menu.less
+++ b/common/application/menu.less
@@ -55,6 +55,7 @@ ul.first-level {
 	& > li.expanded {
 		background-color: #FFF;
 		box-shadow: 0px 1px 3px #CCC;
+		border-collapse: separate;
 	}
 	& > li.collapsed {
 		&:hover {
